--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="partials/colors.css">
     <link rel="stylesheet" href="partials/header.css">
+    <link rel="stylesheet" href="partials/layout.css">
 
 
 </head>
@@ -44,11 +45,100 @@
                 <div class="header-button">
                     <a href="">Agendar horário</a>
                 </div>
-                
             </nav>
-        </header>
 
+            <main class="hero container">
+                <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E PERSONALIDADE.</h1>
+                <p>Horário de funcionamento: 09:00 ás 19:00</p>
+                <a href="#" class="button-contact" target="_blank">Agendar horário</a>
+            </main>
+        </header>
     </div>
+
+
+    <section class="about">
+        <div class="container about-content">
+            <div>
+                <img src="assets/images.svg" alt="imagem sobre a barbearia">
+            </div>
+
+            <div class="about-description">
+                <h2>Sobre</h2>
+                <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
+                <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class=" services-content container">
+            <h2>Serviços</h2>
+            <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
+        </div>
+
+        <section class="haircuts">
+            <div class="haircut">
+                <img src="assets/corte1.png" alt="corte normal">
+                <div class="haircut-info">
+                    <strong>Corte normal</strong>
+                    <button>
+                        R$ 45,00
+                    </button>
+                </div>
+            </div>
+
+            <div class="haircut">
+                <img src="assets/corte2.png" alt="Barba completa">
+                <div class="haircut-info">
+                    <strong>Barba completa</strong>
+                    <button>
+                        R$ 35,00
+                    </button>
+                </div>
+            </div>
+
+            <div class="haircut">
+                <img src="assets/corte3.png" alt="Cabelo e barba">
+                <div class="haircut-info">
+                    <strong>Cabelo e barba</strong>
+                    <button>
+                        R$ 70,00
+                    </button>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <div class="services">
+        <h2>Venha conhecer</h2>
+    </div>
+
+    <iframe
+        width="100%"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.27862366115!2d-48.54760982453683!3d-27.584890176252948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273816b92d1303%3A0x8e51529bcc5674b1!2sBeiramar%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1705274155068!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+
+    <footer class="footer">
+        <div class="footer-icons">
+            <a href="#">
+                <i class="fa-brands fa-instagram fa-2x"></i>
+            </a>
+
+            <a href="#">
+                <i class="fa-brands fa-facebook fa-2x"></i>
+            </a>
+
+            <a href="#">
+                <i class="fa-brands fa-tiktok fa-2x"></i>
+            </a>
+        </div>
+
+        <div>
+            <img src="assets/logo.svg" alt="logo-barbearia">
+        </div>
+
+        <p>Copyright 2024 | Barber - Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 
